5_developer_set_10cd65b1/webserver/2_webserver_api_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    x500name: CN=CK Development Limited, O=CryptoBLK Limited, OU=Developer, L=Singapore, C=SG
    cloud.google.com/backend-config: '{"ports": {"8080":"my-backendconfig-developer"}}'
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: developer-api
    x500name_uuid: 10cd65b1
  name: developer-api
  namespace: maple-topazelite-webservers-nodes
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: developer-api
    x500name_uuid: 10cd65b1
  type: NodePort
