5_developer_set_10cd65b1/webserver/4_developer_ingress_akv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-body-size: "55m"
  labels:
    app: developer-webserver
    webserver_domain_uuid: 5fd5bfe0
    x500name_uuid: 10cd65b1
  name: developer-webserver
  namespace: maple-topazelite-webservers-nodes
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: developer-frontend
      port:
        number: 80
  rules:
  - http:
      paths:
      - backend:
          service:
            name: developer-api
            port:
              number: 8080
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: developer-api
            port:
              number: 8080
        path: /logout
        pathType: Prefix
      - backend:
          service:
            name: developer-frontend
            port:
              number: 80
        path: /ui
        pathType: Prefix
      - backend:
          service:
            name: developer-frontend
            port:
              number: 80
        path: /static
        pathType: Prefix
